--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
+
+<!-- semantic-ui-react -->
+<link
+  rel="stylesheet"
+  href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
+/>
+
+</head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
